RESOLVED FIXED215977
[JSC] `let [` sequence cannot appear in ExpressionStatement context
https://bugs.webkit.org/show_bug.cgi?id=215977
Summary [JSC] `let [` sequence cannot appear in ExpressionStatement context
Yusuke Suzuki
Reported 2020-08-29 02:27:12 PDT
[JSC] `let [` sequence cannot appear in ExpressionStatement context
Attachments
Patch (8.88 KB, patch)
2020-08-29 02:30 PDT, Yusuke Suzuki
ross.kirsling: review+
Yusuke Suzuki
Comment 1 2020-08-29 02:30:15 PDT
Ross Kirsling
Comment 2 2020-08-29 02:53:34 PDT
Comment on attachment 407538 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=407538&action=review r=me. I'm shocked at how simple this patch is. > Source/JavaScriptCore/parser/Parser.cpp:1964 > + failIfTrue(match(OPENBRACKET), "\"let [\" cannot appear at the beginning of expression statement context"); This is fine as an explanation for a spec-aware individual, but I don't think it's clear enough as a user-facing error message. How about something like "cannot appear in a single-line control flow body"?
Yusuke Suzuki
Comment 3 2020-08-29 13:43:30 PDT
Comment on attachment 407538 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=407538&action=review >> Source/JavaScriptCore/parser/Parser.cpp:1964 >> + failIfTrue(match(OPENBRACKET), "\"let [\" cannot appear at the beginning of expression statement context"); > > This is fine as an explanation for a spec-aware individual, but I don't think it's clear enough as a user-facing error message. > How about something like "cannot appear in a single-line control flow body"? Yeah, I've changed this to `Cannot use lexical declaration in single-statement context.`
Yusuke Suzuki
Comment 4 2020-08-29 13:44:31 PDT
Radar WebKit Bug Importer
Comment 5 2020-08-29 13:45:26 PDT
Note You need to log in before you can comment on or make changes to this bug.