[JSC] `let [` sequence cannot appear in ExpressionStatement context https://bugs.webkit.org/show_bug.cgi?id=215977

Reviewed by Ross Kirsling.

JSTests:

* stress/let-and-open-bracket.js: Added.
(testSyntax):
(testSyntaxError):
* test262/expectations.yaml:

Source/JavaScriptCore:

Because of ambiguity between destructuring assignment and member access (let IDENTIFIER), ECMA262 does not allow `let [` sequence in ExpressionStatement context[1].
We should throw SyntaxError when we see something like this.

    if (false)
        let [ok] = [42];

[1]: https://tc39.es/ecma262/#sec-expression-statement

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseStatement):

Canonical link: https://commits.webkit.org/228763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266327 268f45cc-cd09-0410-ab3c-d52691b4dbfc